# code-report

./: .gitignore  README.md  code-report.cabal  stack.yaml
src/: Main.hs
src/Analysis/: Analysis.hs
src/Lang/: Lang.hs  Parser.hs
test/: Main.hs
tests/: Main.hs
tests/Test/Lang/: Parser.hs
