Name:                code-report
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Executable code-report
  hs-source-dirs: main/
  
  main-is: Main.hs

  build-depends:  base
                , bytestring    
                , mtl
                , snap    
                , snap-core  
                , snap-server
                , aeson
                , code-report

library
  hs-source-dirs: src/

  build-depends:
                base
              , bytestring
              , mtl
              , megaparsec
  
  exposed-modules:
                  Lang.Parser
                , Lang.Lang
                , Analysis.Analysis

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:
                base
              , hspec
              , megaparsec
              , code-report
  other-modules:
                Test.Lang.Parser

                  
